core/api/mbink.h

// ========== 类型定义 ==========

typedef struct MBinkWindow* MBinkHandle;
typedef enum {
    MBINK_LIFECYCLE_CREATED = 0,
    MBINK_LIFECYCLE_LOADED = 1,
    MBINK_LIFECYCLE_RUNNING = 2,
    MBINK_LIFECYCLE_CLOSE_REQUESTED = 3,
    MBINK_LIFECYCLE_STOPPED = 4,
    MBINK_LIFECYCLE_DESTROYED = 5
} MBinkLifecycleState;
typedef enum {
    MBINK_OBSERVE_CONSOLE = 1,
    MBINK_OBSERVE_ERROR = 2
} MBinkObserveKind;
// ========== 窗口配置 ==========

typedef struct {
    const char* title;
    int width;
    int height;
    bool headless;
    bool borderless;
    bool transparent;
    bool always_on_top;
    bool resizable;
    bool gpu;
    bool fullscreen;
    int resize_border_width;
    int min_width, min_height;
    int max_width, max_height;
} MBinkConfig;
typedef struct {
    const char* runtime_epoch;
    bool load_embedded_runtime;
    bool load_official_preact;
} MBinkRuntimeOptions;
typedef struct {
    const char* runtime_epoch;
    size_t max_nodes;
    int max_depth;
    const char* root_selector;
    bool include_screenshot;
    bool inline_screenshot;
    const char* screenshot_file;
} MBinkUiDevSnapshotOptions;
typedef struct {
    const char* bind_host;   /* nullptr/default = 127.0.0.1 */
    unsigned short port;     /* 0 = ephemeral port */
    const char* auth_token;  /* nullptr/empty = generated token when require_auth is true */
    bool require_auth;
} MBinkDevToolsHttpOptions;
typedef struct {
    unsigned short port;
    char* url;
    char* auth_token;
} MBinkDevToolsHttpInfo;
// ========== 回调类型 ==========

// 函数绑定回调: JS 调用 backend.xxx() 时触发，返回 JSON 字符串。
// 返回值必须由 MBink 运行时通过 mbink_free() 释放。
// 建议绑定层使用 mbink_copy_string() 分配返回字符串，确保分配/释放在同一运行时。
typedef char* (*MBinkCallback)(const char* args_json, void* user_data);
typedef char* (*MBinkAsyncCallback)(const char* args_json, void* user_data);
// 状态变更回调
typedef void (*MBinkStateCallback)(const char* name, const char* value_json,
                                     void* user_data);
// 事件回调
typedef void (*MBinkResizeCallback)(int width, int height, void* user_data);
typedef void (*MBinkVoidCallback)(void* user_data);
typedef bool (*MBinkBoolCallback)(void* user_data);
typedef void (*MBinkUpdateCallback)(float delta_time, void* user_data);
typedef void (*MBinkObserveCallback)(MBinkObserveKind kind,
                                     const char* entry_json,
                                     void* user_data);
// ========== 生命周期 ==========

MBINK_API int mbink_init(void);
MBINK_API void mbink_cleanup(void);
MBINK_API const char* mbink_version(void);
// ========== 窗口管理 ==========

/** 创建窗口（简单版，使用默认配置） */
MBINK_API MBinkHandle mbink_create(const char* title, int width,
                                         int height);
/** 创建窗口（完整版，使用 MBinkConfig） */
MBINK_API MBinkHandle mbink_create_ex(const MBinkConfig* config);
/** 获取默认配置（可修改后传给 mbink_create_ex） */
MBINK_API MBinkConfig mbink_default_config(void);
MBINK_API void mbink_destroy(MBinkHandle handle);
/** 阻塞运行事件循环，直到窗口关闭或调用 mbink_stop() */
MBINK_API void mbink_run(MBinkHandle handle);
MBINK_API void mbink_stop(MBinkHandle handle);
/** 单次事件循环迭代（高级用法） */
MBINK_API bool mbink_poll_events(MBinkHandle handle);
MBINK_API MBinkRuntimeOptions mbink_default_runtime_options(void);
MBINK_API int mbink_configure_runtime(MBinkHandle handle,
                                      const MBinkRuntimeOptions* options);
MBINK_API int mbink_load_embedded_runtime(MBinkHandle handle,
                                          bool include_official_preact);
MBINK_API int mbink_load_entry_file(MBinkHandle handle, const char* entry_path,
                                    bool execute_html_scripts);
MBINK_API int mbink_load_module_file(MBinkHandle handle,
                                     const char* entry_path);
MBINK_API int mbink_render_frame(MBinkHandle handle, int passes);
MBINK_API int mbink_runtime_epoch(MBinkHandle handle, char** out_epoch);
MBINK_API MBinkLifecycleState mbink_lifecycle_state(MBinkHandle handle);
MBINK_API int mbink_lifecycle_reason(MBinkHandle handle, char** out_reason);
// ========== 窗口属性 ==========

MBINK_API int mbink_set_title(MBinkHandle handle, const char* title);
MBINK_API int mbink_tray_create(MBinkHandle handle, const char* tooltip);
MBINK_API int mbink_tray_destroy(MBinkHandle handle);
MBINK_API int mbink_tray_set_tooltip(MBinkHandle handle, const char* tooltip);
MBINK_API int mbink_tray_set_menu(MBinkHandle handle, const char* menu_json);
MBINK_API int mbink_tray_set_left_click_callback(MBinkHandle handle,
                                                 MBinkVoidCallback callback,
                                                 void* user_data);
MBINK_API int mbink_tray_set_menu_callback(MBinkHandle handle,
                                           MBinkCallback callback,
                                           void* user_data);
MBINK_API int mbink_set_size(MBinkHandle handle, int width, int height);
MBINK_API int mbink_get_size(MBinkHandle handle, int* width, int* height);
MBINK_API int mbink_set_position(MBinkHandle handle, int x, int y);
MBINK_API int mbink_get_position(MBinkHandle handle, int* x, int* y);
MBINK_API int mbink_set_min_size(MBinkHandle handle, int width, int height);
MBINK_API int mbink_set_max_size(MBinkHandle handle, int width, int height);
MBINK_API int mbink_minimize(MBinkHandle handle);
MBINK_API int mbink_maximize(MBinkHandle handle);
MBINK_API int mbink_restore(MBinkHandle handle);
MBINK_API int mbink_show(MBinkHandle handle);
MBINK_API int mbink_hide(MBinkHandle handle);
MBINK_API int mbink_set_fullscreen(MBinkHandle handle, bool fullscreen);
MBINK_API int mbink_set_resizable(MBinkHandle handle, bool resizable);
MBINK_API int mbink_set_borderless(MBinkHandle handle, bool borderless);
MBINK_API int mbink_set_always_on_top(MBinkHandle handle, bool on_top);
// ========== 函数绑定 ==========

/** 绑定宿主函数，JS 中通过 backend.name(args) 调用 */
MBINK_API int mbink_bind(MBinkHandle handle, const char* name,
                             MBinkCallback callback, void* user_data);
/** 绑定异步宿主函数，JS 中通过 await backend.name(args) 调用 */
MBINK_API int mbink_bind_async(MBinkHandle handle, const char* name,
                               MBinkAsyncCallback callback, void* user_data);
MBINK_API void mbink_unbind(MBinkHandle handle, const char* name);
// ========== DevTools ==========

MBINK_API int mbink_devtools_open(MBinkHandle handle);
MBINK_API int mbink_devtools_close(MBinkHandle handle);
MBINK_API MBinkDevToolsHttpOptions mbink_devtools_default_http_options(void);
MBINK_API int mbink_devtools_http_start(MBinkHandle handle,
                                        const MBinkDevToolsHttpOptions* options,
                                        MBinkDevToolsHttpInfo* out_info);
MBINK_API int mbink_devtools_http_stop(MBinkHandle handle);
MBINK_API void mbink_devtools_http_info_free(MBinkDevToolsHttpInfo* info);
// ========== UI Dev / Control ==========

MBINK_API MBinkUiDevSnapshotOptions mbink_ui_dev_default_snapshot_options(void);
MBINK_API int mbink_ui_dev_snapshot_json(MBinkHandle handle,
                                         const MBinkUiDevSnapshotOptions* options,
                                         char** out_json);
MBINK_API int mbink_ui_dev_snapshot_file(MBinkHandle handle,
                                         const char* output_path,
                                         const MBinkUiDevSnapshotOptions* options);
MBINK_API int mbink_ui_dev_command_json(MBinkHandle handle,
                                        const char* command_json,
                                        char** out_response_json);
// ========== 工具函数 ==========

// 拷贝字符串到 MBink 运行时分配的内存；调用者需通过 mbink_free() 释放
MBINK_API char* mbink_copy_string(const char* str);
MBINK_API const char* mbink_last_error(void);