bindings/python/mbink/_ffi.py

"""
MBink C API ctypes 绑定层
自动加载 mbink.dll / libmbink.so，声明所有 C 函数签名
"""

import ctypes
import ctypes.util
import os
import sys
import platform

# ========== 类型别名 ==========
c_int = ctypes.c_int
c_int64 = ctypes.c_int64
c_double = ctypes.c_double
c_bool = ctypes.c_bool
c_char_p = ctypes.c_char_p
c_void_p = ctypes.c_void_p
c_float = ctypes.c_float
c_size_t = ctypes.c_size_t
c_uint32 = ctypes.c_uint32
c_ushort = ctypes.c_ushort
POINTER = ctypes.POINTER

# ========== 回调类型 ==========
# char* (*MBinkCallback)(const char* args_json, void* user_data)
# 注意：回调返回值必须来自 mbink_copy_string()，由 MBink 在 C 侧释放
MBinkCallback = ctypes.CFUNCTYPE(c_void_p, c_char_p, c_void_p)
MBinkAsyncCallback = ctypes.CFUNCTYPE(c_void_p, c_char_p, c_void_p)
# void (*MBinkStateCallback)(const char* name, const char* value_json, void* user_data)
MBinkStateCallback = ctypes.CFUNCTYPE(None, c_char_p, c_char_p, c_void_p)
# void (*MBinkResizeCallback)(int width, int height, void* user_data)
MBinkResizeCallback = ctypes.CFUNCTYPE(None, c_int, c_int, c_void_p)
# void (*MBinkVoidCallback)(void* user_data)
MBinkVoidCallback = ctypes.CFUNCTYPE(None, c_void_p)
# bool (*MBinkBoolCallback)(void* user_data)
MBinkBoolCallback = ctypes.CFUNCTYPE(c_bool, c_void_p)
# void (*MBinkUpdateCallback)(float delta_time, void* user_data)
MBinkUpdateCallback = ctypes.CFUNCTYPE(None, c_float, c_void_p)
MBinkObserveCallback = ctypes.CFUNCTYPE(None, c_int, c_char_p, c_void_p)


# ========== MBinkConfig 结构体 ==========
class MBinkConfig(ctypes.Structure):
    _fields_ = [
        ("title", c_char_p),
        ("width", c_int),
        ("height", c_int),
        ("headless", c_bool),
        ("borderless", c_bool),
        ("transparent", c_bool),
        ("always_on_top", c_bool),
        ("resizable", c_bool),
        ("gpu", c_bool),
        ("fullscreen", c_bool),
        ("resize_border_width", c_int),
        ("min_width", c_int), ("min_height", c_int),
        ("max_width", c_int), ("max_height", c_int),
    ]


class MBinkRuntimeOptions(ctypes.Structure):
    _fields_ = [
        ("runtime_epoch", c_char_p),
        ("load_embedded_runtime", c_bool),
        ("load_official_preact", c_bool),
    ]


class MBinkUiDevSnapshotOptions(ctypes.Structure):
    _fields_ = [
        ("runtime_epoch", c_char_p),
        ("max_nodes", c_size_t),
        ("max_depth", c_int),
        ("root_selector", c_char_p),
        ("include_screenshot", c_bool),
        ("inline_screenshot", c_bool),
        ("screenshot_file", c_char_p),
    ]


class MBinkDevToolsHttpOptions(ctypes.Structure):
    _fields_ = [
        ("bind_host", c_char_p),
        ("port", c_ushort),
        ("auth_token", c_char_p),
        ("require_auth", c_bool),
    ]


class MBinkDevToolsHttpInfo(ctypes.Structure):
    _fields_ = [
        ("port", c_ushort),
        ("url", c_char_p),
        ("auth_token", c_char_p),
    ]


# ========== DLL 加载 ==========
def _find_dll():
    """查找 MBink 动态库"""
    # 可能的文件名
    if platform.system() == "Windows":
        names = ["mbink.dll"]
    elif platform.system() == "Darwin":
        names = ["libmbink.dylib"]
    else:
        names = ["libmbink.so"]

    # 搜索路径
    pkg_dir = os.path.dirname(os.path.abspath(__file__))
    proj_root = os.path.normpath(os.path.join(pkg_dir, "..", "..", ".."))
    search_dirs = [
        pkg_dir,  # 当前包目录
        os.path.join(pkg_dir, "bin"),  # bin 子目录
        os.getcwd(),  # 当前工作目录
        os.path.join(proj_root, "build", "bin", "Release"),  # CMake Release 输出
        os.path.join(proj_root, "build", "bin", "Debug"),    # CMake Debug 输出
    ]

    # 从环境变量获取额外搜索路径
    env_path = os.environ.get("MBINK_DLL_PATH", "")
    if env_path:
        search_dirs.insert(0, env_path)

    for d in search_dirs:
        for name in names:
            path = os.path.join(d, name)
            if os.path.exists(path):
                return path

    # 最后尝试系统路径
    for name in names:
        try:
            return ctypes.util.find_library(name.replace(".dll", "").replace("lib", "").replace(".so", "").replace(".dylib", ""))
        except Exception:
            pass

    return None


def load_dll(path=None):
    """加载 MBink 动态库并绑定函数签名"""
    if path is None:
        path = _find_dll()
    if path is None:
        raise FileNotFoundError(
            "找不到 MBink 动态库。请设置 MBINK_DLL_PATH 环境变量，"
            "或将 mbink.dll 放在当前目录下。"
        )
    lib = ctypes.CDLL(path)
    lib._mbink_dll_path = path
    _bind_functions(lib)
    return lib


def _devtools_library_names():
    if platform.system() == "Windows":
        return ["mbink_devtools.dll"]
    if platform.system() == "Darwin":
        return ["libmbink_devtools.dylib"]
    return ["libmbink_devtools.so"]


def _find_devtools_dll(mbink_lib=None, path=None):
    if path:
        return os.path.abspath(path)

    names = _devtools_library_names()
    candidates = []
    env_path = os.environ.get("MBINK_DEVTOOLS_PATH", "")
    if env_path:
        if os.path.isdir(env_path):
            candidates.extend(os.path.abspath(os.path.join(env_path, name)) for name in names)
        else:
            candidates.append(os.path.abspath(env_path))

    mbink_path = getattr(mbink_lib, "_mbink_dll_path", None)
    if mbink_path:
        base_dir = os.path.dirname(os.path.abspath(mbink_path))
        candidates.extend(os.path.join(base_dir, name) for name in names)

    pkg_dir = os.path.dirname(os.path.abspath(__file__))
    for directory in (
        os.path.join(pkg_dir, "bin"),
        pkg_dir,
    ):
        candidates.extend(os.path.abspath(os.path.join(directory, name)) for name in names)

    for candidate in candidates:
        if candidate and os.path.exists(candidate):
            return candidate

    return None


def load_devtools_dll(mbink_lib=None, path=None):
    resolved = _find_devtools_dll(mbink_lib, path)
    if resolved is None:
        raise FileNotFoundError(
            "mbink_devtools dynamic library not found. Set MBINK_DEVTOOLS_PATH "
            "or place mbink_devtools.dll next to mbink.dll."
        )
    lib = ctypes.CDLL(resolved)
    lib._mbink_devtools_dll_path = resolved
    _bind_devtools_functions(lib)
    return lib


def _bind_devtools_functions(lib):
    H = c_void_p
    lib.mbink_devtools_open.restype = c_int
    lib.mbink_devtools_open.argtypes = [H]
    lib.mbink_devtools_close.restype = c_int
    lib.mbink_devtools_close.argtypes = [H]
    lib.mbink_devtools_default_http_options.restype = MBinkDevToolsHttpOptions
    lib.mbink_devtools_default_http_options.argtypes = []
    lib.mbink_devtools_http_start.restype = c_int
    lib.mbink_devtools_http_start.argtypes = [H, POINTER(MBinkDevToolsHttpOptions), POINTER(MBinkDevToolsHttpInfo)]
    lib.mbink_devtools_http_stop.restype = c_int
    lib.mbink_devtools_http_stop.argtypes = [H]
    lib.mbink_devtools_http_info_free.restype = None
    lib.mbink_devtools_http_info_free.argtypes = [POINTER(MBinkDevToolsHttpInfo)]
    lib.mbink_ui_dev_default_snapshot_options.restype = MBinkUiDevSnapshotOptions
    lib.mbink_ui_dev_default_snapshot_options.argtypes = []
    lib.mbink_ui_dev_snapshot_json.restype = c_int
    lib.mbink_ui_dev_snapshot_json.argtypes = [H, POINTER(MBinkUiDevSnapshotOptions), POINTER(c_void_p)]
    lib.mbink_ui_dev_snapshot_file.restype = c_int
    lib.mbink_ui_dev_snapshot_file.argtypes = [H, c_char_p, POINTER(MBinkUiDevSnapshotOptions)]
    lib.mbink_ui_dev_command_json.restype = c_int
    lib.mbink_ui_dev_command_json.argtypes = [H, c_char_p, POINTER(c_void_p)]


def _bind_functions(lib):
    """声明所有 C 函数签名"""
    H = c_void_p  # MBinkHandle

    # 生命周期
    lib.mbink_init.restype = c_int
    lib.mbink_init.argtypes = []
    lib.mbink_cleanup.restype = None
    lib.mbink_cleanup.argtypes = []
    lib.mbink_version.restype = c_char_p
    lib.mbink_version.argtypes = []
    lib.mbink_last_error.restype = c_char_p
    lib.mbink_last_error.argtypes = []

    # 窗口管理
    lib.mbink_create.restype = H
    lib.mbink_create.argtypes = [c_char_p, c_int, c_int]
    lib.mbink_create_ex.restype = H
    lib.mbink_create_ex.argtypes = [POINTER(MBinkConfig)]
    lib.mbink_default_config.restype = MBinkConfig
    lib.mbink_default_config.argtypes = []
    lib.mbink_destroy.restype = None
    lib.mbink_destroy.argtypes = [H]
    lib.mbink_run.restype = None
    lib.mbink_run.argtypes = [H]
    lib.mbink_stop.restype = None
    lib.mbink_stop.argtypes = [H]
    lib.mbink_poll_events.restype = c_bool
    lib.mbink_poll_events.argtypes = [H]
    lib.mbink_default_runtime_options.restype = MBinkRuntimeOptions
    lib.mbink_default_runtime_options.argtypes = []
    lib.mbink_configure_runtime.restype = c_int
    lib.mbink_configure_runtime.argtypes = [H, POINTER(MBinkRuntimeOptions)]
    lib.mbink_load_embedded_runtime.restype = c_int
    lib.mbink_load_embedded_runtime.argtypes = [H, c_bool]
    lib.mbink_load_entry_file.restype = c_int
    lib.mbink_load_entry_file.argtypes = [H, c_char_p, c_bool]
    lib.mbink_load_module_file.restype = c_int
    lib.mbink_load_module_file.argtypes = [H, c_char_p]
    lib.mbink_render_frame.restype = c_int
    lib.mbink_render_frame.argtypes = [H, c_int]
    lib.mbink_runtime_epoch.restype = c_int
    lib.mbink_runtime_epoch.argtypes = [H, POINTER(c_void_p)]
    lib.mbink_lifecycle_state.restype = c_int
    lib.mbink_lifecycle_state.argtypes = [H]
    lib.mbink_lifecycle_reason.restype = c_int
    lib.mbink_lifecycle_reason.argtypes = [H, POINTER(c_void_p)]

    # 函数绑定
    lib.mbink_bind.restype = c_int
    lib.mbink_bind.argtypes = [H, c_char_p, MBinkCallback, c_void_p]
    lib.mbink_bind_async.restype = c_int
    lib.mbink_bind_async.argtypes = [H, c_char_p, MBinkAsyncCallback, c_void_p]
    lib.mbink_unbind.restype = None
    lib.mbink_unbind.argtypes = [H, c_char_p]

    # 窗口属性
    lib.mbink_set_title.restype = c_int
    lib.mbink_set_title.argtypes = [H, c_char_p]
    lib.mbink_tray_create.restype = c_int
    lib.mbink_tray_create.argtypes = [H, c_char_p]
    lib.mbink_tray_destroy.restype = c_int
    lib.mbink_tray_destroy.argtypes = [H]
    lib.mbink_tray_set_tooltip.restype = c_int
    lib.mbink_tray_set_tooltip.argtypes = [H, c_char_p]
    lib.mbink_tray_set_menu.restype = c_int
    lib.mbink_tray_set_menu.argtypes = [H, c_char_p]
    lib.mbink_tray_set_left_click_callback.restype = c_int
    lib.mbink_tray_set_left_click_callback.argtypes = [H, MBinkVoidCallback, c_void_p]
    lib.mbink_tray_set_menu_callback.restype = c_int
    lib.mbink_tray_set_menu_callback.argtypes = [H, MBinkCallback, c_void_p]
    lib.mbink_set_size.restype = c_int
    lib.mbink_set_size.argtypes = [H, c_int, c_int]
    lib.mbink_get_size.restype = c_int
    lib.mbink_get_size.argtypes = [H, POINTER(c_int), POINTER(c_int)]
    lib.mbink_set_position.restype = c_int
    lib.mbink_set_position.argtypes = [H, c_int, c_int]
    lib.mbink_get_position.restype = c_int
    lib.mbink_get_position.argtypes = [H, POINTER(c_int), POINTER(c_int)]
    lib.mbink_set_min_size.restype = c_int
    lib.mbink_set_min_size.argtypes = [H, c_int, c_int]
    lib.mbink_set_max_size.restype = c_int
    lib.mbink_set_max_size.argtypes = [H, c_int, c_int]
    lib.mbink_minimize.restype = c_int
    lib.mbink_minimize.argtypes = [H]
    lib.mbink_maximize.restype = c_int
    lib.mbink_maximize.argtypes = [H]
    lib.mbink_restore.restype = c_int
    lib.mbink_restore.argtypes = [H]
    lib.mbink_show.restype = c_int
    lib.mbink_show.argtypes = [H]
    lib.mbink_hide.restype = c_int
    lib.mbink_hide.argtypes = [H]
    lib.mbink_set_fullscreen.restype = c_int
    lib.mbink_set_fullscreen.argtypes = [H, c_bool]
    lib.mbink_set_resizable.restype = c_int
    lib.mbink_set_resizable.argtypes = [H, c_bool]
    lib.mbink_set_borderless.restype = c_int
    lib.mbink_set_borderless.argtypes = [H, c_bool]
    lib.mbink_set_always_on_top.restype = c_int
    lib.mbink_set_always_on_top.argtypes = [H, c_bool]
